{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 217,
  "lineage": "dbd5b94e-5a7f-4ef6-d57a-4dcd61fa3972",
  "resources": [
    {
      "module": "module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:174228772591:security-group/sg-005e957a790d82ff8",
            "description": "this loadbalancer sg allows the http traffic on port 80 and also on port 81",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-005e957a790d82ff8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow http traffic from port 81",
                "from_port": 81,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 81
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "Loadbalancer-SG-20220506062250188900000003",
            "name_prefix": "Loadbalancer-SG-",
            "owner_id": "174228772591",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Loadbalancer-SG",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "Loadbalancer-SG",
              "environment": "Dev",
              "owners": "SAP"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-09940a683cde6610b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-1393144705",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-005e957a790d82ff8",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-721337172",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-005e957a790d82ff8",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-608680536",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-005e957a790d82ff8",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow http traffic from port 81",
            "from_port": 81,
            "id": "sgrule-3310863666",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-005e957a790d82ff8",
            "self": false,
            "source_security_group_id": null,
            "to_port": 81,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:174228772591:security-group/sg-0dd11689ba9bb5c57",
            "description": "Allow ssh on port 22 and hhtp traffic within the network of CIDR",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dd11689ba9bb5c57",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.230.0.0/25"
                ],
                "description": "HTTP",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "10.230.0.0/25"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.230.0.0/25"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SAP-Dev-PublicSG-20220506062251152200000005",
            "name_prefix": "SAP-Dev-PublicSG-",
            "owner_id": "174228772591",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SAP-Dev-PublicSG",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-Dev-PublicSG",
              "environment": "Dev",
              "owners": "SAP"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-09940a683cde6610b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.private_security-group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-1698594347",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0dd11689ba9bb5c57",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "module.private_security-group.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_security-group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.230.0.0/25"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-2762709710",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0dd11689ba9bb5c57",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "module.private_security-group.aws_security_group.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.230.0.0/25"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-151912445",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0dd11689ba9bb5c57",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "module.private_security-group.aws_security_group.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.230.0.0/25"
            ],
            "description": "HTTP",
            "from_port": 8080,
            "id": "sgrule-1915298425",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0dd11689ba9bb5c57",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_security-group.aws_security_group.this",
            "module.private_security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:174228772591:security-group/sg-09291ee4c26a38740",
            "description": "Allow ssh on port 22 from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09291ee4c26a38740",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SAP-Dev-PublicSG-20220506062251217800000006",
            "name_prefix": "SAP-Dev-PublicSG-",
            "owner_id": "174228772591",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SAP-Dev-PublicSG",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-Dev-PublicSG",
              "environment": "Dev",
              "owners": "SAP"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-09940a683cde6610b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.public_security-group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-836388395",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-09291ee4c26a38740",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_security-group.aws_security_group.this",
            "module.public_security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_security-group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-1049274531",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09291ee4c26a38740",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.public_security-group.aws_security_group.this",
            "module.public_security-group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.rds_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:174228772591:security-group/sg-016468013a5535802",
            "description": "this rds sg allows the database traffic within the vpc",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-016468013a5535802",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.230.0.0/25"
                ],
                "description": "Allow http traffic from port 3306 within vpc",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "RDS-SG-20220506062251143400000004",
            "name_prefix": "RDS-SG-",
            "owner_id": "174228772591",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDS-SG",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "RDS-SG",
              "environment": "Dev",
              "owners": "SAP"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-09940a683cde6610b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.rds_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-1103277453",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-016468013a5535802",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rds_sg.aws_security_group.this",
            "module.rds_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.rds_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.230.0.0/25"
            ],
            "description": "Allow http traffic from port 3306 within vpc",
            "from_port": 3306,
            "id": "sgrule-2402333191",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-016468013a5535802",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rds_sg.aws_security_group.this",
            "module.rds_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fd79a7f7a80b217e",
            "association_id": "eipassoc-09aeb0e2c4a2613c3",
            "domain": "vpc",
            "id": "eipalloc-0fd79a7f7a80b217e",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0b07bca003ec21f09",
            "private_dns": "ip-10-230-0-12.ap-south-1.compute.internal",
            "private_ip": "10.230.0.12",
            "public_dns": "ec2-43-204-78-128.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.204.78.128",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "SAP-Dev-Vpc-DEV-ap-south-1a",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-Dev-Vpc-DEV-ap-south-1a",
              "environment": "Dev",
              "owners": "SAP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:174228772591:internet-gateway/igw-0333f0c6885569a9a",
            "id": "igw-0333f0c6885569a9a",
            "owner_id": "174228772591",
            "tags": {
              "Name": "SAP-Dev-Vpc-DEV",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-Dev-Vpc-DEV",
              "environment": "Dev",
              "owners": "SAP"
            },
            "vpc_id": "vpc-09940a683cde6610b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fd79a7f7a80b217e",
            "connectivity_type": "public",
            "id": "nat-056b3267b9b150b11",
            "network_interface_id": "eni-0b07bca003ec21f09",
            "private_ip": "10.230.0.12",
            "public_ip": "43.204.78.128",
            "subnet_id": "subnet-02daf50ff2cce9700",
            "tags": {
              "Name": "SAP-Dev-Vpc-DEV-ap-south-1a",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-Dev-Vpc-DEV-ap-south-1a",
              "environment": "Dev",
              "owners": "SAP"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f73d0716177a40871080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-056b3267b9b150b11",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f73d0716177a4087",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0333f0c6885569a9a",
            "id": "r-rtb-080e3e208de6967c71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-080e3e208de6967c7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:174228772591:route-table/rtb-0726227799e93f92d",
            "id": "rtb-0726227799e93f92d",
            "owner_id": "174228772591",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "SAP-Dev-Vpc-DEV-db",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-Dev-Vpc-DEV-db",
              "environment": "Dev",
              "owners": "SAP"
            },
            "timeouts": null,
            "vpc_id": "vpc-09940a683cde6610b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:174228772591:route-table/rtb-0f73d0716177a4087",
            "id": "rtb-0f73d0716177a4087",
            "owner_id": "174228772591",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-056b3267b9b150b11",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "SAP-Dev-Vpc-DEV-private",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-Dev-Vpc-DEV-private",
              "environment": "Dev",
              "owners": "SAP"
            },
            "timeouts": null,
            "vpc_id": "vpc-09940a683cde6610b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:174228772591:route-table/rtb-080e3e208de6967c7",
            "id": "rtb-080e3e208de6967c7",
            "owner_id": "174228772591",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0333f0c6885569a9a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "SAP-Dev-Vpc-DEV-public",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-Dev-Vpc-DEV-public",
              "environment": "Dev",
              "owners": "SAP"
            },
            "timeouts": null,
            "vpc_id": "vpc-09940a683cde6610b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c9f6367d0a118f9",
            "route_table_id": "rtb-0726227799e93f92d",
            "subnet_id": "subnet-0e37e47e832311229"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e13abf361ea0ea7e",
            "route_table_id": "rtb-0726227799e93f92d",
            "subnet_id": "subnet-0754b3fe39773b1fd"
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f2de4dd0bbee963",
            "route_table_id": "rtb-0f73d0716177a4087",
            "subnet_id": "subnet-0dcc3253b5e6ece7d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b4cb822abc1041a",
            "route_table_id": "rtb-0f73d0716177a4087",
            "subnet_id": "subnet-0812b71195093d249"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd06c231d7d82eae",
            "route_table_id": "rtb-080e3e208de6967c7",
            "subnet_id": "subnet-02daf50ff2cce9700"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa064ed3d5e50883",
            "route_table_id": "rtb-080e3e208de6967c7",
            "subnet_id": "subnet-0eabdb341cdf3614e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:174228772591:subnet/subnet-0e37e47e832311229",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.230.0.64/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e37e47e832311229",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "174228772591",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SAP-Dev-Vpc-DEV-db-ap-south-1a",
              "Type": "Database-subnets",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-Dev-Vpc-DEV-db-ap-south-1a",
              "Type": "Database-subnets",
              "environment": "Dev",
              "owners": "SAP"
            },
            "vpc_id": "vpc-09940a683cde6610b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:174228772591:subnet/subnet-0754b3fe39773b1fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.230.0.80/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0754b3fe39773b1fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "174228772591",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SAP-Dev-Vpc-DEV-db-ap-south-1b",
              "Type": "Database-subnets",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-Dev-Vpc-DEV-db-ap-south-1b",
              "Type": "Database-subnets",
              "environment": "Dev",
              "owners": "SAP"
            },
            "vpc_id": "vpc-09940a683cde6610b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:174228772591:subnet/subnet-0dcc3253b5e6ece7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.230.0.16/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dcc3253b5e6ece7d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "174228772591",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SAP-Dev-Vpc-DEV-private-ap-south-1a",
              "Type": "private-subnets",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-Dev-Vpc-DEV-private-ap-south-1a",
              "Type": "private-subnets",
              "environment": "Dev",
              "owners": "SAP"
            },
            "vpc_id": "vpc-09940a683cde6610b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:174228772591:subnet/subnet-0812b71195093d249",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.230.0.48/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0812b71195093d249",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "174228772591",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SAP-Dev-Vpc-DEV-private-ap-south-1b",
              "Type": "private-subnets",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-Dev-Vpc-DEV-private-ap-south-1b",
              "Type": "private-subnets",
              "environment": "Dev",
              "owners": "SAP"
            },
            "vpc_id": "vpc-09940a683cde6610b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:174228772591:subnet/subnet-02daf50ff2cce9700",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.230.0.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02daf50ff2cce9700",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "174228772591",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SAP-Dev-Vpc-DEV-public-ap-south-1a",
              "Type": "public-subnets",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-Dev-Vpc-DEV-public-ap-south-1a",
              "Type": "public-subnets",
              "environment": "Dev",
              "owners": "SAP"
            },
            "vpc_id": "vpc-09940a683cde6610b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:174228772591:subnet/subnet-0eabdb341cdf3614e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.230.0.32/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eabdb341cdf3614e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "174228772591",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SAP-Dev-Vpc-DEV-public-ap-south-1b",
              "Type": "public-subnets",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-Dev-Vpc-DEV-public-ap-south-1b",
              "Type": "public-subnets",
              "environment": "Dev",
              "owners": "SAP"
            },
            "vpc_id": "vpc-09940a683cde6610b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:174228772591:vpc/vpc-09940a683cde6610b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.230.0.0/25",
            "default_network_acl_id": "acl-08ad44e6e1455f7ea",
            "default_route_table_id": "rtb-09fe870f75b68d0bc",
            "default_security_group_id": "sg-06d9b3fe383ff3657",
            "dhcp_options_id": "dopt-00a9eb174d57b8372",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09940a683cde6610b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09fe870f75b68d0bc",
            "owner_id": "174228772591",
            "tags": {
              "Name": "SAP-Dev-Vpc-DEV",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-Dev-Vpc-DEV",
              "environment": "Dev",
              "owners": "SAP"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}